# esp32-esl-system

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main/assets/: hello_images.h  price_tag_image.h
main/epd_display/: epd_display.c  epd_display.h  epd_font.h  epd_graphics.c  epd_graphics.h
main/esl/: esl_ui.c  esl_ui.h
web-server/: Dockerfile  docker-compose.yml
web-server/mosquitto/: mosquitto.conf
web-server/web-page/: bin-viewer.html  index.html
web-server/web-page/css/: style.css
web-server/web-page/js/: script.js
